feat!: release version 2.0.0 with breaking changes
BREAKING CHANGE: This is version 2.0.0 with the following breaking changes:
- Package renamed from flair-api-ts to @jarlbrak/flair-api-ts
- OAuth 1.0 is no longer supported, only OAuth 2.0
- Complete API overhaul with support for all latest Flair devices

feat: comprehensive API update
- Full OAuth 2.0 authentication support
- Added HVAC units (minisplits) with temperature, fan, swing, mode, and power control
- Added thermostats, bridges, and remote sensors support
- Webhook registration for real-time updates
- Schedule management capabilities
- 30+ new attributes in Structure model
- Enhanced TypeScript definitions

docs: update README and package info
- Updated all imports to use new package name
- Added migration guide from 1.x
- Updated author information with credits to original author
- Comprehensive changelog for 2.0.0

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@jarlbrak/flair-api-ts",
   "version": "0.0.0-development",
-  "description": "A ts-node implementation of the Flair Smart Vent API",
-  "author": "bassrock",
+  "description": "A TypeScript implementation of the Flair Smart Vent API with OAuth 2.0 support",
+  "author": "jarlbrak",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "publishConfig": {
@@ -18,10 +18,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bassrock/node-flair-api-ts"
+    "url": "https://github.com/jarlbrak/node-flair-api-ts"
   },
   "bugs": {
-    "url": "https://github.com/bassrock/node-flair-api-ts/issues"
+    "url": "https://github.com/jarlbrak/node-flair-api-ts/issues"
   },
   "release": {
     "branches": [
