--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
       - run: npm install
       - run: npm run build
       - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
+        uses: cycjimmy/semantic-release-action@v3
         env:
-          # secrets.GITHUB_TOKEN does not have necessary permissions
-          GH_TOKEN: ${{ secrets.SEMENTIC_AND_DEPBOT_TOKEN }}
+          # Use GITHUB_TOKEN if SEMENTIC_AND_DEPBOT_TOKEN is not available
+          GITHUB_TOKEN: ${{ secrets.SEMENTIC_AND_DEPBOT_TOKEN || secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
