feat\!: replace legacy API with OAuth 2.0 and generic CRUD operations
BREAKING CHANGES:
* Replace OAuth2 password grant with secure client credentials flow
* Constructor now requires only client_id and client_secret (no username/password)
* Remove all legacy resource-specific methods (getVents, getPucks, etc.)
* Replace with unified generic CRUD API: get(), create(), update(), delete()
* Authentication endpoint changed from /oauth2/token to /oauth/token

Major Features:
* Add generic CRUD methods supporting any resource type with full TypeScript generics
* Implement enhanced Model base class with instance CRUD operations and client reference
* Add JSON-API compliant request formatting and relationship management
* Create structured error handling with EmptyBodyError and ApiError classes
* Remove moment.js dependency for lighter bundle size

Architecture Improvements:
* Reduce client code by ~90% while significantly expanding functionality
* Enable dynamic resource handling without hardcoded methods
* Add proper JSON-API headers: Accept: application/vnd.api+json
* Implement relationship conversion and management system
* Unified API surface - one method signature handles all resource types

Testing:
* Add 22 comprehensive tests covering all new functionality
* Test generic CRUD operations, error handling, and edge cases
* Validate JSON-API compliance and relationship management
* Remove deprecated tests for legacy authentication methods

This release achieves architectural parity with modern API clients while
maintaining full TypeScript type safety and comprehensive test coverage.
The API is now significantly cleaner and more maintainable.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flair-api-ts",
   "version": "0.0.0-development",
-  "description": "A ts-node implementation of the Flair Smart Vent API",
+  "description": "A TypeScript implementation of the Flair Smart Vent API with OAuth 2.0 support",
   "author": "bassrock",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -35,8 +35,7 @@
     ]
   },
   "dependencies": {
-    "axios": "^1.2.2",
-    "moment": "^2.29.1"
+    "axios": "^1.2.2"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "9.0.2",
